--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -1,5 +1,5 @@
 .contact{
-    font-size: 1.4rem;
+    // font-size: 1.4rem;
     &__box{
         display: flex;
         flex-direction: column;
