--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/colors';
+
 .about-us {
 	&__text {
 		font-size: 1.4rem;
@@ -22,7 +23,7 @@
 		background-position: center;
 		text-align: center;
 		&:hover .products__option-text {
-			transform: scale(1.6) translate(-32%, -30%);
+			transform: scale(1.2) translate(-40%, -40%);
 		}
 	}
 	&__img-1 {
